--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "6.10.3",
-    "@hookform/resolvers": "^5.2.2",
+    "@clerk/nextjs": "^6.37.1",
+    "@hookform/resolvers": "3",
     "@mux/mux-node": "9.0.1",
+    "@mux/mux-player": "^3.10.2",
+    "@mux/mux-player-react": "^3.2.4",
     "@mux/mux-uploader-react": "1.1.1",
     "@neondatabase/serverless": "0.10.4",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -57,10 +59,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
+    "drizzle-zod": "0.7.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
-    "next": "15.1.6",
+    "next": "^15.5.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
@@ -83,12 +86,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "0.30.3",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "4.19.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
