--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:webhook": "npx ngrok http --domain=inventive-laurinda-clinkingly.ngrok-free.dev 3000",
-    "dev:all": "concurrently \"bun run dev\" \"npm run dev:webhook\"",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev:server": "next build && next start",
+  "dev:webhook": "wait-on http://localhost:3000 && ngrok http --domain=inventive-laurinda-clinkingly.ngrok-free.dev 3000",
+  "dev:all": "concurrently -k -n SERVER,NGROK -c green,cyan \"bun run dev:server\" \"bun run dev:webhook\"",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
+
   "dependencies": {
     "@clerk/nextjs": "^6.37.1",
     "@hookform/resolvers": "3",
@@ -49,8 +50,10 @@
     "@trpc/client": "11.0.0-rc.730",
     "@trpc/react-query": "11.0.0-rc.730",
     "@trpc/server": "11.0.0-rc.730",
+    "@uploadthing/react": "7.1.5",
     "@upstash/ratelimit": "2.0.5",
     "@upstash/redis": "1.34.3",
+    "@upstash/workflow": "0.2.6",
     "class-variance-authority": "^0.7.1",
     "client-only": "0.0.1",
     "clsx": "^2.1.1",
@@ -70,7 +73,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "5.0.0",
     "react-hook-form": "^7.70.0",
-    "react-resizable-panels": "^4.3.3",
+    "react-resizable-panels": "4.3.3",
     "recharts": "^2.15.4",
     "server-only": "0.0.1",
     "sonner": "^2.0.7",
@@ -78,8 +81,9 @@
     "svix": "1.45.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "7.4.4",
     "vaul": "^1.1.2",
-    "zod": "3.24.1"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -89,9 +93,14 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "patch-package": "^8.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.21.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^9.0.3"
+  },
+  "overrides": {
+    "zod": "3.23.8"
   }
 }
