--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "dev:server": "next dev",
-  "dev:webhook": "wait-on http://localhost:3000 && ngrok http --domain=inventive-laurinda-clinkingly.ngrok-free.dev 3000",
-  "dev:all": "concurrently -k -n SERVER,NGROK -c green,cyan \"bun run dev:server\" \"bun run dev:webhook\"",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
-},
-
+    "dev": "next dev",
+    "dev:server": "next dev",
+    "dev:webhook": "wait-on http://localhost:3000 && ngrok http --domain=inventive-laurinda-clinkingly.ngrok-free.dev 3000",
+    "dev:all": "concurrently -k -n SERVER,NGROK -c green,cyan \"bun run dev:server\" \"bun run dev:webhook\"",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.37.1",
     "@hookform/resolvers": "3",
@@ -59,7 +58,7 @@
     "client-only": "0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "concurrently": "9.1.2",
+    "concurrently": "^9.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
@@ -99,7 +98,7 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.21.0",
     "typescript": "^5",
-    "wait-on": "^9.0.3"
+    "wait-on": "^9.0.4"
   },
   "overrides": {
     "zod": "3.23.8"
